--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h1>manta.digital</h1>
     <p>
       Site launch coming soon.<br />
-      Reach me at <a href="https://erikcorkran.com"erikcorkran.com></a>
+      Reach me at <a href="https://erikcorkran.com">erikcorkran.com</a>
     </p>
   </body>
 </html>
